# PLYwoot

./: .clang-format  .gitmodules  .project.vim  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  annotated_dup.js  ascii__parser__policy_8hpp.html  ascii__parser__policy_8hpp.js  ascii__parser__policy_8hpp_source.html  ascii__writer__policy_8hpp.html  ascii__writer__policy_8hpp_source.html  binary__parser__policy_8hpp.html  binary__parser__policy_8hpp.js  binary__parser__policy_8hpp_source.html  binary__writer__policy_8hpp.html  binary__writer__policy_8hpp.js  binary__writer__policy_8hpp_source.html  buffered__istream_8hpp.html  buffered__istream_8hpp_source.html  buffered__ostream_8hpp.html  buffered__ostream_8hpp_source.html  classes.html  classplywoot_1_1Exception-members.html  classplywoot_1_1Exception.html  classplywoot_1_1Exception.js  classplywoot_1_1IStream-members.html  classplywoot_1_1IStream.html  classplywoot_1_1IStream.js  classplywoot_1_1OStream-members.html  classplywoot_1_1OStream.html  classplywoot_1_1OStream.js  classplywoot_1_1PlyElementData-members.html  classplywoot_1_1PlyElementData.html  classplywoot_1_1PlyElementData.js  classplywoot_1_1detail_1_1AsciiParserPolicy-members.html  classplywoot_1_1detail_1_1AsciiParserPolicy.html  classplywoot_1_1detail_1_1AsciiParserPolicy.js  (+197 more)
.github/workflows/: doxygen.yml  main.yml  unittest.yml
benchmark/: CMakeLists.txt  benchmark.cpp
benchmark/input/ascii/: LICENSE
cmake/: PLYwootConfig.cmake.in
docs/: custom.css  header.html  main.md
include/plywoot/: plywoot.hpp  plywoot_exceptions.hpp  plywoot_header_parser.hpp  plywoot_header_scanner.hpp  plywoot_header_scanner_ios.hpp  plywoot_std.hpp
include/plywoot/plywoot/: ascii_parser_policy.hpp  ascii_policy.hpp  ascii_writer_policy.hpp  binary_little_endian_parser_policy.hpp  binary_little_endian_policy.hpp  binary_little_endian_writer_policy.hpp  binary_parser_policy.hpp  binary_writer_policy.hpp  buffered_istream.hpp  buffered_ostream.hpp  element_data.hpp  endian.hpp  exceptions.hpp  header_parser.hpp  header_scanner.hpp  header_scanner_ios.hpp  io.hpp  parser.hpp  parser_variant.hpp  reflect.hpp  std.hpp  type_traits.hpp  types.hpp  writer.hpp  writer_variant.hpp
scripts/: generate_amalgamation.py  generate_main_markdown.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_e.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+40 more)
test/: CMakeLists.txt  main.cpp  test-cpp11.cpp  test_convert.cpp  test_iostream.cpp  test_iostream_ascii.cpp  test_iostream_binary_little_endian.cpp  test_istream.cpp  test_istream_ascii.cpp  test_istream_binary_little_endian.cpp  test_ostream.cpp  test_ostream_ascii.cpp  test_type_traits.cpp  test_types.hpp  types.hpp  util.hpp
test/input/: binary_little_endian.ply  cube_faces_before_vertices.ply  cube_with_material_data.ply  invalid.ply  invalid_format.ply  missing_element_property_data.ply  missing_format.ply  multi_line_comment.ply  multiple_elements.ply  multiple_elements_with_single_property.ply  multiple_elements_with_two_properties.ply  single_element.ply  single_element_with_single_property.ply  single_line_comment.ply
test/input/ascii/: alignment.ply  all.ply  comments.ply  cube.ply  element_with_last_property_variadic_list.ply  element_with_variadic_list_to_skip.ply
test/input/binary/big_endian/: alignment.ply  all.ply  cube.ply  cube_faces_before_vertices.ply  cube_with_material_data.ply  element_with_last_property_variadic_list.ply  element_with_variadic_list_to_skip.ply  multiple_elements_with_single_property.ply  multiple_elements_with_two_properties.ply  single_element_with_list_property_followed_by_three_properties.ply  single_element_with_single_property.ply
test/input/binary/little_endian/: alignment.ply  all.ply  cube.ply  element_with_last_property_variadic_list.ply  element_with_variadic_list_to_skip.ply  multiple_elements_with_single_property.ply  multiple_elements_with_two_properties.ply  single_element_with_list_property_followed_by_three_properties.ply
test/input/binary_little_endian/: cube_faces_before_vertices.ply  cube_with_material_data.ply  multiple_elements_with_two_properties.ply  single_element_with_single_property.ply
test/input/header/: binary_big_endian.ply  format_in_wrong_order.ply  keywords.ply  missing_element_property_data_2.ply  missing_element_size.ply  multi_line_comment.ply  single_element_with_properties.ply  single_element_with_properties_using_type_aliases.ply  single_line_comment.ply
tools/: CMakeLists.txt  reply.cpp
